--- a/peach/package.json
+++ b/peach/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.1",
+    "@mantine/form": "^4.1.1",
+    "@mantine/hooks": "^4.1.1",
+    "@mantine/modals": "^4.1.1",
+    "@mantine/next": "^4.1.1",
+    "@mantine/notifications": "^4.1.1",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-query": "^3.34.19"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
