--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/pycharm,nextjs,node,yarn,django,python
-# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,nextjs,node,yarn,django,python
+# Created by https://www.toptal.com/developers/gitignore/api/node,yarn,python,nextjs,django,pycharm,cypressio
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,yarn,python,nextjs,django,pycharm,cypressio
+
+### CypressIO ###
+# gitignore template for the CypressIO, browser test framework
+# website: https://www.cypress.io/
+
+cypress/results/*
+cypress/reports/*
+cypress/screenshots/*
+cypress/videos/*
 
 ### Django ###
 *.log
@@ -507,4 +516,4 @@ fabric.properties
 # and uncomment the following lines
 # .pnp.*
 
-# End of https://www.toptal.com/developers/gitignore/api/pycharm,nextjs,node,yarn,django,python
+# End of https://www.toptal.com/developers/gitignore/api/node,yarn,python,nextjs,django,pycharm,cypressio
