--- a/peach/package.json
+++ b/peach/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-query": "^3.34.19"
+    "react-query": "^3.34.19",
+    "zod": "^3.14.3"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
