--- a/peach/package.json
+++ b/peach/package.json
@@ -16,10 +16,12 @@
     "@mantine/modals": "^4.1.1",
     "@mantine/next": "^4.1.1",
     "@mantine/notifications": "^4.1.1",
+    "jotai": "^1.6.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-query": "^3.34.19",
+    "tabler-icons-react": "^1.43.0",
     "zod": "^3.14.3"
   },
   "devDependencies": {
