--- a/peach/package.json
+++ b/peach/package.json
@@ -31,6 +31,7 @@
     "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "prettier": "^2.6.2",
     "typescript": "4.6.3"
   }
 }
