--- a/strawberry/requirements.txt
+++ b/strawberry/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.0.3
+django-filter==21.1
 djangorestframework==3.13.1
 drf-yasg==1.20.0
 idna==3.3
@@ -28,7 +29,7 @@ ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
 sqlparse==0.4.2
 tomli==2.0.1
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
