--- a/peach/package.json
+++ b/peach/package.json
@@ -16,6 +16,8 @@
     "@mantine/modals": "^4.1.1",
     "@mantine/next": "^4.1.1",
     "@mantine/notifications": "^4.1.1",
+    "cookies": "^0.8.0",
+    "http-proxy": "^1.18.1",
     "jotai": "^1.6.1",
     "next": "12.1.4",
     "react": "18.0.0",
@@ -25,6 +27,8 @@
     "zod": "^3.14.3"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.7",
+    "@types/http-proxy": "^1.17.8",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
