--- a/peach/package.json
+++ b/peach/package.json
@@ -17,6 +17,7 @@
     "@mantine/next": "^4.1.1",
     "@mantine/notifications": "^4.1.1",
     "cookies": "^0.8.0",
+    "dateformat": "^5.0.3",
     "http-proxy": "^1.18.1",
     "jotai": "^1.6.1",
     "next": "12.1.4",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/cookies": "^0.7.7",
+    "@types/dateformat": "^5.0.0",
     "@types/http-proxy": "^1.17.8",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
