--- a/peach/package.json
+++ b/peach/package.json
@@ -16,6 +16,7 @@
     "@mantine/modals": "^4.1.1",
     "@mantine/next": "^4.1.1",
     "@mantine/notifications": "^4.1.1",
+    "axios": "^0.27.2",
     "cookies": "^0.8.0",
     "dateformat": "^5.0.3",
     "http-proxy": "^1.18.1",
