--- a/peach/package.json
+++ b/peach/package.json
@@ -10,6 +10,8 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/micah": "^4.10.2",
     "@mantine/core": "^4.1.1",
     "@mantine/form": "^4.1.1",
     "@mantine/hooks": "^4.1.1",
